# rust-grpc-server

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
proto/: grpc_server.proto
src/: interceptor.rs  main.rs  proto.rs  service.rs
