[package]
name = "grpc_server"
version = "0.1.0"
authors = ["Sergi Alonso <sergi.alonsobadia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2.0"
prost = "0.6.1"
tokio = { version = "1.8.4",  features = ["macros"]}

[build-dependencies]
tonic-build = "0.2"
